--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.8",
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
