--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
+    "ejs-lint": "^2.0.0",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.8",
