--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.8",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
