--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
+  "name": "hash-game",
+  "version": "0.0.0",
+  "private": true,
+  "author": "Enrell",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+  },
   "dependencies": {
     "bootstrap": "^5.2.3",
     "ejs": "^3.1.8",
     "ejs-lint": "^2.0.0",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.25.8",
-    "socket.io": "^4.5.3",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.28.0",
+    "socket.io": "^4.5.4",
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^2.7.1",
+    "vite": "^4.0.0"
   },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "hash-game",
-  "description": "",
-  "version": "1.0.0",
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/enrell/hash-game.git"
-  },
-  "author": "Enrell",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/enrell/hash-game/issues"
   },
-  "homepage": "https://github.com/enrell/hash-game#readme"
+    "repository": {
+    "type": "git",
+    "url": "git+https://github.com/enrell/hash-game.git"
+  },
+    "homepage": "https://github.com/enrell/hash-game#readme"
 }
